# Negotiation-backend-

./: .gitignore  README.md  fix_files.py  pyproject.toml  reproduce_connection.py  requirements.txt  verify_integrations.py
app/: main.py
app/agents/: graph.py  nodes.py  prompts.py  state.py
app/api/: deps.py
app/api/v1/: auth.py  files.py  negotiation.py  router.py
app/core/: config.py  files.py  rag.py  security.py
app/crud/: crud_embedding.py  crud_file.py  crud_negotiation.py  crud_user.py
app/db/: session.py
app/models/: embedding.py  file.py  message.py  negotiation.py  user.py
app/schemas/: embedding.py  file.py  message.py  negotiation.py  user.py
